--- a/index.html
+++ b/index.html
@@ -1,97 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Free Fire Diamond Generator</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: url('https://i.ibb.co/VjzFj7g/freefire-bg.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background: linear-gradient(180deg, #330000 0%, #1a0000 100%);
+      overflow: hidden;
       color: white;
+    }
+
+    .bg-animation {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle, rgba(255,0,0,0.3) 0%, transparent 70%);
+      animation: pulse 3s infinite;
+      z-index: -1;
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 0.4; }
+      50% { opacity: 0.7; }
+    }
+
+    .header {
       display: flex;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      flex-direction: column;
-      backdrop-filter: blur(5px);
+      padding: 15px;
     }
+
+    .header img {
+      width: 40px;
+      margin-right: 10px;
+    }
+
     .generator-box {
+      max-width: 400px;
+      margin: 50px auto;
       background: rgba(0, 0, 0, 0.85);
-      padding: 30px;
       border-radius: 15px;
-      box-shadow: 0 0 20px #ffdf00aa;
-      width: 90%;
-      max-width: 350px;
+      box-shadow: 0 0 20px #ff000088;
+      padding: 25px;
       text-align: center;
-      animation: fadeIn 1s ease-in-out;
+      animation: fadeIn 1s ease;
     }
+
     input, select, button {
       width: 90%;
       margin: 10px auto;
-      padding: 10px;
+      padding: 12px;
       border: none;
       border-radius: 8px;
       font-size: 16px;
       outline: none;
     }
+
     input, select {
       background: #2c2c2c;
       color: white;
     }
+
     button {
-      background: #ffd700;
-      color: black;
+      background: #ff0000;
+      color: white;
       font-weight: bold;
-      cursor: pointer;
       transition: background 0.3s ease;
+      cursor: pointer;
     }
+
     button:hover {
-      background: #ffb800;
+      background: #cc0000;
     }
-    #result {
-      margin-top: 20px;
-      min-height: 50px;
+
+    .profile {
+      display: none;
+      margin-top: 15px;
+      border: 1px solid #444;
+      padding: 10px;
+      border-radius: 8px;
     }
-    .loader {
-      border: 5px solid #222;
-      border-top: 5px solid #ffd700;
+
+    .profile img {
+      width: 60px;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      margin: 10px auto;
+      margin-bottom: 5px;
     }
+
+    .console {
+      background: #111;
+      color: #0f0;
+      text-align: left;
+      font-family: monospace;
+      padding: 10px;
+      margin-top: 15px;
+      border-radius: 8px;
+      max-height: 150px;
+      overflow-y: auto;
+      font-size: 14px;
+    }
+
     .modal {
       display: none;
       position: fixed;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.85);
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.9);
       justify-content: center;
       align-items: center;
-      text-align: center;
       z-index: 999;
     }
+
     .modal-content {
-      background: #1b1b1b;
+      background: #1a0000;
       padding: 20px;
       border-radius: 10px;
-      color: white;
-      max-width: 300px;
-      box-shadow: 0 0 15px #ffd700aa;
+      text-align: center;
+      box-shadow: 0 0 15px red;
     }
+
     .modal button {
-      margin-top: 15px;
-      background: #ffd700;
+      background: #ff0000;
+      color: white;
+      margin-top: 10px;
     }
-    @keyframes spin {
-      0% { transform: rotate(0deg);}
-      100% { transform: rotate(360deg);}
-    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -100,66 +137,91 @@
 </head>
 <body>
 
-  <div class="generator-box">
-    <h2>Free Fire Diamond Generator 💎</h2>
-    <input type="text" id="uid" placeholder="Enter Your UID" />
-    <select id="diamonds">
-      <option value="100">100 Diamonds</option>
-      <option value="200">200 Diamonds</option>
-      <option value="300">300 Diamonds</option>
-      <option value="1000">1000 Diamonds</option>
-      <option value="2000">2000 Diamonds</option>
-    </select>
-    <button onclick="generateDiamonds()">Generate</button>
-    <div id="result"></div>
+<div class="bg-animation"></div>
+
+<div class="header">
+  <img src="https://upload.wikimedia.org/wikipedia/en/4/4e/Garena_Free_Fire_logo.png" alt="Garena Logo">
+  <h2>Free Fire Diamond Generator</h2>
+</div>
+
+<div class="generator-box">
+  <input type="text" id="uid" placeholder="Enter UID">
+  <select id="diamonds">
+    <option value="100">100 Diamonds</option>
+    <option value="200">200 Diamonds</option>
+    <option value="300">300 Diamonds</option>
+    <option value="1000">1000 Diamonds</option>
+    <option value="2000">2000 Diamonds</option>
+  </select>
+  <button onclick="startGeneration()">Generate Diamonds</button>
+
+  <div class="profile" id="profileBox">
+    <img src="https://i.ibb.co/Fn0rsqX/avatar-ff.png" alt="Avatar">
+    <p><strong>Username:</strong> GhostHunter</p>
+    <p><strong>Level:</strong> 62</p>
   </div>
 
-  <div class="modal" id="verifyModal">
-    <div class="modal-content">
-      <h3>⚠️ Final Step</h3>
-      <p>To protect from bots, please complete human verification.</p>
-      <button onclick="closeModal()">Verify Now</button>
-    </div>
+  <div class="console" id="consoleBox"></div>
+</div>
+
+<div class="modal" id="verifyModal">
+  <div class="modal-content">
+    <h3>🔒 Bot Authentication Failed</h3>
+    <p>Your device failed the bot check.</p>
+    <p>Please try again later or use a different browser.</p>
+    <button onclick="document.getElementById('verifyModal').style.display='none'">Close</button>
   </div>
+</div>
 
-  <audio id="clickSound" src="https://www.soundjay.com/buttons/sounds/button-16.mp3" preload="auto"></audio>
-  <audio id="genSound" src="https://www.soundjay.com/misc/sounds/magic-chime-01.mp3" preload="auto"></audio>
+<script>
+  function log(msg) {
+    const consoleBox = document.getElementById("consoleBox");
+    consoleBox.innerHTML += `> ${msg}<br>`;
+    consoleBox.scrollTop = consoleBox.scrollHeight;
+  }
 
-  <script>
-    function generateDiamonds() {
-      const uid = document.getElementById("uid").value.trim();
-      const diamonds = document.getElementById("diamonds").value;
-      const result = document.getElementById("result");
-      const clickSound = document.getElementById("clickSound");
-      const genSound = document.getElementById("genSound");
+  function startGeneration() {
+    const uid = document.getElementById("uid").value.trim();
+    const diamonds = document.getElementById("diamonds").value;
+    const profileBox = document.getElementById("profileBox");
+    const consoleBox = document.getElementById("consoleBox");
+    const modal = document.getElementById("verifyModal");
 
-      clickSound.play();
+    if (!uid) {
+      alert("⚠️ Please enter your UID!");
+      return;
+    }
 
-      if (!uid) {
-        result.innerHTML = "<p style='color: red;'>⚠️ Please enter your Free Fire UID!</p>";
-        return;
+    profileBox.style.display = "block";
+    consoleBox.innerHTML = "";
+
+    let steps = [
+      `Connecting to Free Fire servers...`,
+      `Verifying UID: ${uid}`,
+      `UID Found: GhostHunter [Level 62]`,
+      `Selected: ${diamonds} Diamonds`,
+      `Injecting Diamonds...`,
+      `Performing Bot Authentication...`,
+      `❌ Bot Authentication Failed`
+    ];
+
+    let i = 0;
+    let interval = setInterval(() => {
+      if (i < steps.length) {
+        log(steps[i]);
+        if (i === steps.length - 1) {
+          setTimeout(() => {
+            modal.style.display = "flex";
+          }, 500);
+        }
+        i++;
+      } else {
+        clearInterval(interval);
       }
+    }, 1500);
+  }
+</script>
 
-      result.innerHTML = "<div class='loader'></div><p>Connecting to Free Fire server...</p>";
-
-      setTimeout(() => {
-        result.innerHTML = "<div class='loader'></div><p>Injecting diamonds...</p>";
-      }, 2500);
-
-      setTimeout(() => {
-        genSound.play();
-        result.innerHTML = `<p>✅ <strong>${diamonds}</strong> diamonds added to UID <strong>${uid}</strong>!</p><p>🔒 Final step required...</p>`;
-      }, 5000);
-
-      setTimeout(() => {
-        document.getElementById("verifyModal").style.display = "flex";
-      }, 7000);
-    }
-
-    function closeModal() {
-      document.getElementById("verifyModal").style.display = "none";
-      alert("Verification failed. Please try again later."); // Just a prank 😅
-    }
-  </script>
 </body>
 </html>
+
