--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <div class="bg-animation"></div>
 
 <div class="header">
-  <img src="https://upload.wikimedia.org/wikipedia/en/4/4e/Garena_Free_Fire_logo.png" alt="Garena Logo">
+  <img src="https://cdn.discordapp.com/attachments/1364369067301011588/1389254718831853681/pngwing.com.png?ex=6863f3c8&is=6862a248&hm=19559a420d3850b1d4bcd111668daa06dc0d3b6d41cd77a4b04bbb1ebd2d8e20&" alt="Garena Logo">
   <h2>Free Fire Diamond Generator</h2>
 </div>
 
